--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,20 @@
 Package: pullr
-Type: Package
-Title: Interpretation of Nebraska Tractor Tests
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Tractor Tractive Effort Performance Analysis 
+Version: 0.0.0.9000
+Authors@R: person("Glenn", "Sanders", email = "glennwilliamsanders@gmail.com", role = c("aut", "cre"))
+Description: Series of functions to analyse tractor pulling performance.
+URL: http://github.com/glennSanders/pullr.git
+BugReports: http://github.com//glennSanders/pullr/issues
+Depends: R (>= 3.5.0)
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Imports:
+    units,
+    Rdpack
+RdMacros: Rdpack
+RoxygenNote: 6.0.1
+Suggests: knitr,
+    rmarkdown,
+    tidyverse
+VignetteBuilder: knitr
